Fixed several typos in the texts - adjusted paragraphs - fixed sass file to be able to have li tags

--- a/css/main.css
+++ b/css/main.css
@@ -7658,9 +7658,7 @@ section {
     section {
       padding: 80px 0; } }
   section ul {
-    padding: 0; }
-    section ul li {
-      list-style: none; }
+    padding-left: 15px; }
 
 .features {
   background: #F4F5F5; }
