--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -6,15 +6,10 @@ section {
     @media screen and (min-width: $screen-sm-min) {
         padding: 80px 0;
     }
-    
-    
-  ul {
-    padding: 0;
-      li {
-        list-style: none;
-      }
-  }
-}
+   ul {
+     padding-left: 15px;
+   } 
+} 
 
 .features {
   background: $gray-light;
